上传最新代码

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport"
       content="width=device-width, initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>饿了么App</title>
-    <link rel="stylesheet" href="./static/reset/reset.css">
+    <link rel="shortcut icon" href="./src/common/img/ele.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./src/common/js/reset.css">
   </head>
 
   <body>
